<resources>
    <string name="app_name">NutriChief</string>

    <string name="verify_account">Verify Your Account</string>
    <string name="fill_email">Please fill in your email</string>
    <string name="verify">Verify</string>
    <string name="e_mail">E-mail</string>
    <string name="create_account">Create Account</string>
    <string name="enjoy_your_meal">Enjoy Your Meal</string>
    <string name="full_name">Full Name</string>
    <string name="i_agree_to_the_terms_conditions"><![CDATA[I agree to the Terms & Conditions]]></string>
    <string name="register">Register</string>
    <string name="year_of_birth">Year of Birth</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="activity_level">Activity Level</string>
    <string name="welcome">Welcome to NutriChief</string>
    <string name="age">Age</string>
    <string name="bmi">BMI</string>
    <string name="tdee">TDEE</string>
    <string name="my_profile">My Profile</string>
    <string-array name="genders_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="activeLevel_array">
        <item>Sedentary</item>
        <item>Lightly active</item>
        <item>Moderately active</item>
        <item>Very active</item>
        <item>Super active</item>
    </string-array>
    <string-array name="spinner_meal_plan_actions">
        <item>Regenerate today meal plan</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="ingredient_description">Ingredient description</string>
    <string name="ingredient_qty">0gr</string>
    <string name="dishes">Dishes</string>
    <string name="ingredients">Ingredients</string>
    <string name="edit_profile" />
    <string name="save">Save</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="default_price">$0.00</string>
    <string name="default_quantity">0</string>
    <string name="place_order">Place Order</string>
    <string name="your_order_default_items">Your Order (0 items)</string>
    <string name="your_order">Your Order</string>
    <string name="order_details">Order details</string>
    <string name="total_price">Total Price</string>
    <string name="tax">Tax</string>
    <string name="sub_total">Sub-total</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="wallets">Wallets</string>
    <string name="order_successful">Order Successful</string>
    <string name="payment">Payment</string>
    <string name="date">DATE</string>
    <string name="total_amount">Total Amount</string>
    <string name="done">Done</string>
    <string name="default_order_id">Order ID: CA124432</string>
    <string name="default_date_and_time">Jan 01, 2021 at 11:14 AM</string>
    <string name="dollar">$</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="need_help_contact_us">Need Help? Contact Us</string>
    <string name="payment_method">Payment Method</string>
    <string name="pay_securely">Pay Securely</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="seems_like_you_have_not_ordered_anything">Seems like you have not ordered anything</string>
    <string name="my_orders">My Orders</string>

</resources>