<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_theme_color"
    android:orientation="vertical"
    tools:context=".view.UserProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_theme_color"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:onClick="goBack"
            android:rotation="-90"
            android:src="@drawable/ic_arrow_upward"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:background="@drawable/top_curve_profile_background" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_user_icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:elevation="10dp"
                    android:src="@drawable/user_male"
                    android:transitionName="userIconTransition"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="581dp"
                android:layout_marginTop="15dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingBottom="100dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_full_name_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_user"
                        android:drawablePadding="10dp"
                        android:hint="@string/full_name"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:id="@+id/register_email_til"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:errorEnabled="true"-->
<!--                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--                    <com.google.android.material.textfield.TextInputEditText-->
<!--                        android:id="@+id/email"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:drawableStart="@drawable/ic_email"-->
<!--                        android:drawablePadding="10dp"-->
<!--                        android:hint="@string/e_mail"-->
<!--                        android:inputType="text" />-->

<!--                </com.google.android.material.textfield.TextInputLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_year_of_birth_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/yearofbirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_age_custom"
                        android:drawablePadding="10dp"
                        android:hint="@string/year_of_birth"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--            <com.google.android.material.textfield.TextInputLayout-->
                <!--                android:id="@+id/register_gender_til"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                app:errorEnabled="true"-->
                <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

                <!--                <com.google.android.material.textfield.TextInputEditText-->
                <!--                    android:id="@+id/gender"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:drawableStart="@drawable/ic_gender"-->
                <!--                    android:drawablePadding="10dp"-->
                <!--                    android:hint="@string/gender"-->
                <!--                    android:inputType="text" />-->

                <!--            </com.google.android.material.textfield.TextInputLayout>-->

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/edit_profile_gender"
                    android:layout_width="match_parent"
                    android:background="@drawable/layout_border"
                    android:layout_marginBottom="10dp"
                    android:layout_height="61dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/gender"
                        android:src="@drawable/ic_gender"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.516" />

                    <Spinner
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.032"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.486" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_weight_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_weight_custom"
                        android:drawablePadding="10dp"
                        android:hint="@string/weight"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_height_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_height_custom"
                        android:drawablePadding="10dp"
                        android:hint="@string/height"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/edit_profile_actLevel"
                    android:layout_width="match_parent"
                    android:background="@drawable/layout_border"
                    android:layout_height="59dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:contentDescription="@string/activity_level"
                        android:src="@drawable/ic_act_level_custom"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.551" />

                    <Spinner
                        android:id="@+id/activeLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.028"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.457" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.551">

                    <Button
                        android:id="@+id/save_emp_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="3"
                        android:enabled="true"
                        android:text="@string/save"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        />
                </LinearLayout>

            </LinearLayout>



            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>